# email-triage-env

./: .dockerignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
email_triage_env/: __init__.py  client.py  email_generator.py  models.py  tasks.py
email_triage_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
email_triage_env/server/: app.py  environment.py
server/: app.py
